--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<h>This is a header</h>
+	<h>This is a new header </h>
 	<p>this is a paragraph</p>
 	<p>This is new paragraph</p>
 	<p>This is another paragraph </p>
